# chessai_template

./: .gitignore  CMakeLists.txt  License.md  README.md
src/: search.c  search.h
src/util/: bb.h  board.h  uci.c
